@@ -1,9 +1,11 @@
 0.3.0
+  BugFix in GhostBSD and TrueOS repo guessing;
   BugFix: pkg clean cache was not working.
   BugFix: Package list does not flashes at program startup.
   BugFix: Do not offer to open "LSB relocatable" files at File tab.
   BugFix: anchor output when pkg list is empty.
   BugFix: TransactionDialog was size constrained.
+  Abort show file content when file list is greater than 1MB of text.
   Changed F12 key behaviour to F11.
   Added the option to terminate the current transaction being executed, by pressing 
 	"Ctrl+C".
